# rts

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.sh
assets/images/: sprites.psd
assets/shaders/: chunk_border_frag.glsl  chunk_border_vert.glsl  chunk_gridlines_vert.glsl  chunk_grids_frag.glsl  chunk_grids_vert.glsl  chunk_sprites_frag.glsl  chunk_sprites_vert.glsl  chunk_tiles_frag.glsl  chunk_tiles_vert.glsl  cursor-select.frag  cursor-select.vert  cursor_box_select_vert.glsl  cursor_select_vert.glsl  font.vert  font_frag.glsl  font_vert.glsl  markers_frag.glsl  markers_vert.glsl  quad-instanced.frag  quad-instanced.vert  quad_frag.glsl  quad_vert.glsl  quads_vert.glsl  sprite-instanced.frag  sprite_vert.glsl  sprites_frag.glsl  sprites_vert.glsl  tile_frag.glsl  tile_gridline_vert.glsl  tile_vert.glsl
data/configs/: unit-ball-cyan.yaml  unit-ball-magenta.yaml
data/images/: sprite.psd
data/shaders/: box_select_frag.glsl  box_select_vert.glsl  chunk_frag.glsl  chunk_vert.glsl  font_frag.glsl  font_vert.glsl  quad-instanced.frag  quad-instanced.vert  quad_frag.glsl  quad_vert.glsl  sprite-instanced.vert  sprite_vert.glsl
demos/: CMakeLists.txt
demos/game-2025-01-31/: Application.hpp  Main.cpp
demos/game_2025_01_31/: application.hpp  main.cpp
demos/game_2025_02_07/: application.hpp
demos/test-camera/: Main.cpp
demos/test_alpha/: main.cpp
demos/test_application/: main.cpp
demos/test_camera/: main.cpp
demos/test_chunk/: main.cpp
demos/test_chunk_rendering/: main.cpp
demos/test_debug_overlay/: main.cpp
demos/test_debug_screen/: main.cpp
demos/test_ecs/: main.cpp
demos/test_entity_config_store/: main.cpp
demos/test_entity_manager/: main.cpp
demos/test_entity_spatial_grid/: main.cpp
demos/test_game_loop/: main.cpp
demos/test_hierarchical_grid/: main.cpp
demos/test_input/: main.cpp
demos/test_quad_renderer/: main.cpp
demos/test_render_chunks/: main.cpp
demos/test_render_markers/: main.cpp
demos/test_render_sprites/: main.cpp
demos/test_sprite_rendering/: main.cpp
demos/test_ui/: main.cpp
demos/test_unit_selection/: main.cpp
demos/test_user_input/: main.cpp
demos/test_world_manager/: main.cpp
docs/: 3rdparty-ideas.md  code-ideas  code-ideas.md  game-ideas.md  game-notes.md  game-planning-20250806.md  links.md  todo.md
src/: CMakeLists.txt  Main.cpp  Main.hpp  main.cpp
src/common/: assets.hpp  configs.hpp  entity_configs.hpp  types.hpp
src/config/: assets.hpp  defaults.hpp  entity_configs.hpp
src/core/: Application.hpp  Defaults.hpp  SDLManager.hpp  Types.hpp  WindowManager.hpp  application.hpp  chunk.hpp  chunk_manager.hpp  ecs.hpp  entity_config_store.hpp  entity_manager.hpp  entity_spatial_grid.hpp  frame_state.hpp  hierarchical_grid.hpp  hierarchical_grid_OLD.hpp  input_state.hpp  object_manager.hpp  sdl_manager.hpp  types.hpp  types_OLD.hpp  uniform_grid.hpp  unit_manager.hpp  world.hpp  world_manager.hpp  world_manager_OLD.hpp  world_manager_OLD2.hpp
src/core/components/: color.hpp  global.hpp  texcoord.hpp  transform.hpp  velocity.hpp
src/core/events/: events.hpp
src/core/systems/: movement.hpp  quads_initialize.hpp  quads_update.hpp
src/ecs/: Archetype.hpp  EntityManager.hpp  Manager.hpp  archetype.cpp  archetype.hpp  archetype_manager.hpp  chunk.cpp  chunk.hpp  chunk_list.hpp  chunk_manager.hpp  component.hpp  component_manager.hpp  entity.hpp  entity_manager.hpp  manager.hpp  types.hpp  world.cpp  world.hpp
src/engine/core/: sdl_manager.hpp  user_input.hpp
src/engine/ecs/: archetype.hpp  entity_manager.hpp  manager.hpp
src/engine/gfx/: camera.hpp  chunk_renderer.hpp  cursor.hpp  debug_screen.hpp  font.hpp  opengl_debug.hpp  quad_renderer.hpp  shader.hpp  texture.hpp  types.hpp
src/engine/ui/: cursor.hpp  debug_overlay.hpp
src/engine/utilities/: assert.hpp  isometric.hpp
src/game/components/: Color.hpp  Global.hpp  Size.hpp  Velocity.hpp  global.hpp  position.hpp  velocity.hpp
src/game/ecs/components/: color.hpp  global.hpp  position.hpp  size.hpp  texcoord.hpp  transform.hpp  velocity.hpp
src/game/ecs/events/: events.hpp
src/game/ecs/systems/: movement.hpp  quad_initialize.hpp  quad_update.hpp  sprite_initialize.hpp  sprite_update.hpp
src/game/gfx/: chunk_renderer.hpp  quads_renderer.hpp  sprites_renderer.hpp
src/game/input/: debug_overlay_controller.hpp  player_camera_controller.hpp  screen_camera_controller.hpp
src/game/systems/: Movement.hpp  SpriteInitialize.hpp  SpriteUpdate.hpp  movement.hpp  sprite_initialize.hpp  sprite_update.hpp
src/game/ui/: control_camera_player.hpp  control_camera_screen.hpp  control_debug_screen.hpp
src/gameplay/components/: Position.hpp
src/gameplay/events/: Events.hpp
src/gameplay/systems/: InitializePositions.hpp  InitializeVelocities.hpp  Movement.hpp
src/graphics/: Camera.hpp  CameraManager.hpp  Cursor.hpp  DebugMessageCallback.hpp  DebugScreen.hpp  Font.hpp  Shader.hpp  SpriteRenderer.hpp  Types.hpp  camera.hpp  cursor.hpp  debug_message_callback.hpp  debug_screen.hpp  font.hpp  quad_renderer.hpp  render_context.hpp  shader.hpp  sprite_renderer.hpp  texture.hpp  types.hpp  vertex_buffer.hpp
src/graphics/render/: chunk_renderer.hpp  chunks_renderer.hpp  markers_renderer.hpp  quad_renderer.hpp  quads_renderer.hpp  sprite_renderer.hpp  sprites_renderer.hpp
src/input/: input_manager.hpp  user_input.hpp
src/input/control/: debug_overlay_controller.hpp  player_camera_controller.hpp  screen_camera_controller.hpp
src/math/: collision.hpp  grid.hpp
src/rendering/: CameraManager.hpp  Shader.hpp  font.hpp
src/ui/: cursor.hpp  debug_overlay.hpp  ui_manager.hpp
src/util/: timer.hpp
src/utilities/: Assert.hpp  File.hpp  Random.hpp  Timer.hpp  timer.hpp
src/utils/: assert.hpp  file.hpp  math.hpp  random.hpp
tools/: 1-source-env.sh  2-download-dependencies.sh  3-build-dependencies.sh  4-build-game.sh  5-run-game.sh  build.sh  utils.sh
